<resources>
    <string name="app_name">AplikasiPahlawanSejarahSumateraBarat</string>
    <string name="logo_name">AplikasiSejarahPahlawan</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="passwordHint">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="nama">Nama Lengkap</string>
</resources>