<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".LoginActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:textSize="40dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/black"
            android:id="@+id/judul"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_below="@+id/judul"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:id="@+id/logo_l"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/judul"
            android:padding="60dp"
            android:layout_marginTop="20dp"
            android:id="@+id/ly2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_shape"
                android:hint="@string/username"
                android:paddingLeft="20dp"
                android:layout_marginTop="190dp"
                android:fontFamily="sans-serif-black"
                android:id="@+id/edit_usr"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_shape"
                android:hint="@string/password"
                android:paddingLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:id="@+id/edit_pw"/>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="LOGIN"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:width="300dp"
                android:backgroundTint="@color/merah"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:layout_below="@+id/R_btn1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_have_an_account"
                    android:fontFamily="sans-serif-black"
                    android:textSize="15sp"
                    android:id="@+id/txt3"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"
                    android:onClick="onRegisterClick"
                    android:text="Register"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck"/>

            </LinearLayout>



        </LinearLayout>



    </RelativeLayout>

</ScrollView>