<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".Editprofil">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EDIT PROFIL"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:textSize="40dp"
            android:fontFamily="@font/jandamanateesolid"
            android:textColor="@color/black"
            android:id="@+id/judul_prof"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profilapl"
            android:layout_below="@+id/judul_prof"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/logo_pr"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/judul_prof"
            android:padding="60dp"
            android:layout_marginTop="20dp"
            android:id="@+id/ly3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_shape"
                android:hint="@string/nama"
                android:paddingLeft="20dp"
                android:layout_marginTop="210dp"
                android:fontFamily="sans-serif-black"
                android:id="@+id/edit_nama"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_shape"
                android:hint="@string/email"
                android:paddingLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:id="@+id/edit_email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_shape"
                android:hint="@string/username"
                android:paddingLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:id="@+id/edit_usr"/>


            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="UPDATE"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:width="280dp"
                android:backgroundTint="@color/merah"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:layout_below="@+id/R_btn3">


            </LinearLayout>



        </LinearLayout>



    </RelativeLayout>


</ScrollView>